--- a/OPENWEBINARS/EstructuraRutas-ACTUALIZADO/pom.xml
+++ b/OPENWEBINARS/EstructuraRutas-ACTUALIZADO/pom.xml
@@ -5,19 +5,30 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
+		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.openwebinars.rest</groupId>
-	<artifactId>09_EstructuraRutasCompleto</artifactId>
+	<groupId>com.salesianostriana.dam</groupId>
+	<artifactId>EstructuraRutas-ACTUALIZADO</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>09_EstructuraRutasCompleto</name>
-	<description>Ejemplo de métodos crud en un API REST</description>
-
+	<name>EstructuraRutas-ACTUALIZADO</name>
+	<description>EstructuraRutas-ACTUALIZADO</description>
+	<url/>
+	<licenses>
+		<license/>
+	</licenses>
+	<developers>
+		<developer/>
+	</developers>
+	<scm>
+		<connection/>
+		<developerConnection/>
+		<tag/>
+		<url/>
+	</scm>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -28,6 +39,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -50,6 +67,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
