--- a/JPA/ejemplos/data/src/main/resources/application.properties
+++ b/JPA/ejemplos/data/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=data
 
+#Configurar la base de datos
 spring.datasource.url=jdbc:h2:./db/database;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.name=sa
 spring.datasource.password=
